src/objects/GTMAccessToken__c.object
<CustomObject>
    <description>Hold GoTo Meeting Access Tokens</description>
    <fields>
        <fullName>AccessToken__c</fullName>
        <externalId>true</externalId>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Key__c</fullName>
        <label>Account Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>Expiry Date</description>
        <label>Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <label>Group ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizer_Key__c</fullName>
        <label>Organizer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GTMAccessToken</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ConnectToMeeting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client_Secret__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>AccessToken__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>GTMAccessToken Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ConnectToMeeting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>